--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,38 @@
-# NativeScript
-hooks/
-node_modules/
-platforms/
+# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# dependencies
+node_modules
 
-# General
+# Expo
+.expo/
+dist/
+web-build/
+expo-env.d.ts
+
+# Native
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+
+# Metro
+.metro-health-check*
+
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+
+# macOS
 .DS_Store
-.AppleDouble
-.LSOverride
-.idea
-.cloud
-.project
-tmp/
-typings/
+*.pem
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
+
+app-example
