--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,17 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "module": "esnext",
-    "target": "ES2020",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "noEmitHelpers": true,
-    "noEmitOnError": true,
-    "jsx": "react",
-    "lib": ["ESNext", "dom"],
-    "baseUrl": ".",
+    "strict": true,
     "paths": {
-      "~/*": ["src/*"],
-      "@/*": ["src/*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
-  "include": ["./src/**/*.tsx?"],
-  "files": ["./references.d.ts"],
-  "exclude": ["node_modules", "platforms"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
+  ]
 }
